--- a/client/partials/view1.html
+++ b/client/partials/view1.html
@@ -7,8 +7,8 @@
 	  			<input  type="submit" value ="Enter" ng-click="enterUser()">
 		</form>
 		   <div ng-messages="userform.name.$error">
-					<p ng-message = "minlength"> User name can not be that short. </p>
-					<p ng-message="required">The User name is required.</p>
+					<p ng-message = "minlength" style="color:red"> User name can not be that short. </p>
+					<p ng-message="required" style="color:red">The User name is required.</p>
 				</div>
 
 </div>
